src/objects/Controlled_Document_Notification_Item__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Step</label>
        <referenceTo>Approval_Step__c</referenceTo>
        <relationshipLabel>Controlled Document Notification History</relationshipLabel>
        <relationshipName>Controlled_Document_Notification_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Controlled_Document__c</fullName>
        <description>Lookup (master detail) back to the controlled document associated with the email notification.  Value set via a trigged.</description>
        <label>Controlled Document</label>
        <referenceTo>Controlled_Document__c</referenceTo>
        <relationshipLabel>Controlled Document Notification History</relationshipLabel>
        <relationshipName>Controlled_Document_Notification_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Notification__c</fullName>
        <label>Type of Notification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Controlled Document Notification Item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Controlled Document Notification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Controlled Document Notification History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>